--- a/package.json
+++ b/package.json
@@ -4,6 +4,16 @@
   "private": true,
   "dependencies": {
     "@babel/preset-env": "^7.11.5",
+    "@canburaks/text-align-editorjs": "^1.0.4",
+    "@editorjs/editorjs": "^2.18.0",
+    "@editorjs/embed": "^2.3.1",
+    "@editorjs/header": "^2.5.0",
+    "@editorjs/image": "^2.5.0",
+    "@editorjs/link": "^2.2.1",
+    "@editorjs/list": "^1.5.0",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/paragraph": "^2.7.0",
+    "@editorjs/quote": "^2.3.0",
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -12,8 +22,11 @@
     "file-loader": "^6.1.0",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
+    "quill": "^1.3.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-quill": "^1.3.5",
+    "react-quilljs": "^1.2.11",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-modal": "^1.5.2",
@@ -51,6 +64,7 @@
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.0",
+    "react-editor-js": "^1.6.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
