--- a/package.json
+++ b/package.json
@@ -5,24 +5,27 @@
   "dependencies": {
     "@babel/preset-env": "^7.11.5",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
+    "draft-js": "^0.11.7",
     "file-loader": "^6.1.0",
     "history": "^5.0.0",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-modal": "^1.5.2",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "write-file-p": "^1.0.8"
   },
   "scripts": {
-    "dev": "webpack-dev-server --mode development --open",
+    "dev": "webpack-dev-server --mode development --hot --inline --content-base=dist --history-api-fallback",
     "prod": "webpack --mode production"
   },
   "eslintConfig": {
